--- a/assets/sass/settings/global.scss
+++ b/assets/sass/settings/global.scss
@@ -32,6 +32,7 @@ $dark-3:			#546e7a;
 
 $pri:				#57B275;
 $sec:				#F05D71;
+$pri-light:			#DDF0E3;
 
 $twitter: 			#55ACEE;
 $dribbble: 			#EA4C89;
@@ -117,3 +118,4 @@ $mq-medium: 			768px;
 $mq-large: 				1000px;
 $mq-x-large: 			1280px;
 $mq-xx-large: 			1500px;
+$mq-animate:			$mq-large;
