--- a/assets/sass/trumps/overrides.scss
+++ b/assets/sass/trumps/overrides.scss
@@ -24,13 +24,13 @@
 	text-align: center;
 }
 
-.u-light-text {
-	font-weight: $light;
-}
-
 .u-highlight-text {
 	color: $pri;
 }
+
+// .s-home {
+// 	background: $pri-light;
+// }
 
 .s-blog,
 .s-blog-article {
