--- a/src/components/case-studies/adspy/illustrations/adspy-extras.hbs
+++ b/src/components/case-studies/adspy/illustrations/adspy-extras.hbs
@@ -13,7 +13,7 @@
 
     <figure class="c-case-study__section__figure u-center-content">
     	<div class="o-wrap o-wrap--x-large">
-			<ol class="c-case-study__illustrations-extras" data-module="Inview">
+			<ol class="c-case-study__illustrations-extras">
 				<li class="c-case-study__illustrations-extras__item">
 					<span class="c-case-study__illustrations-extras__number c-case-study__illustrations-extras__number--ter"></span>
 					<svg class="svg-book" width="200" height="160" viewBox="0 0 200 160" xmlns="http://www.w3.org/2000/svg">
