--- a/src/components/footer.hbs
+++ b/src/components/footer.hbs
@@ -4,7 +4,7 @@
         <div class="c-footer__planner">
             <h3 class="c-footer__heading">{{{heading}}}</h3>
             
-            <a href="#" class="c-button c-button--secondary">
+            <a href="{{url}}" class="c-button c-button--secondary">
                 {{button}}
                 <svg class="u-icon u-icon--arrow-right">
                     <use xlink:href="#icon--arrow-right"></use>
