--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -48,8 +48,8 @@
 						</a>
 					</div>
 					<div class="c-nav__item">
-						<a href="planner.html" class="c-nav__link c-nav__link--button{{#is page.nav 'planner'}} is-active{{/is}}">
-							planner 
+						<a href="mailto:hello@geckotree.co.uk" class="c-nav__link c-nav__link--button">
+							contact 
 							<svg class="u-icon u-icon--feather">
 	                            <use xlink:href="#icon--feather"></use>
 	                        </svg>
