--- a/src/components/page-heading.hbs
+++ b/src/components/page-heading.hbs
@@ -2,7 +2,7 @@
 <header class="o-page-heading o-page-heading--center-content">
 	<div class="o-wrap o-wrap--large">
 		<div class="o-page-heading__content">
-			<h1 class="o-page-heading__heading">{{{heading}}}</h1>
+			<h1 class="o-page-heading__heading{{#if headingClass}} {{headingClass}}{{/if}}">{{{heading}}}</h1>
 			
 			<div class="o-page-heading__description s-free-content u-intro">
 				{{{description}}}
@@ -16,7 +16,7 @@
 <header class="o-page-heading o-page-heading--two-col js-in-page-nav-hero">
 	<div class="o-page-heading__row o-wrap o-wrap--x-large">
 		<div class="o-page-heading__content">
-			<h1 class="o-page-heading__heading">{{{heading}}}</h1>
+			<h1 class="o-page-heading__heading{{#if headingClass}} {{headingClass}}{{/if}}">{{{heading}}}</h1>
 			{{#if meta}}<strong class="o-page-heading__meta u-highlight-text u-intro">{{meta}}</strong>{{/if}}
 
 			<div class="o-page-heading__description u-intro">
