--- a/src/pages/case-studies/adspy.hbs
+++ b/src/pages/case-studies/adspy.hbs
@@ -15,7 +15,7 @@ nav: work
 	            {{>adspy-brand-intro}}
 
 	            <ol class="c-case-study__sections c-case-study__sections__child">
-	                <li class="c-case-study__section c-case-study__section__child" id="style-tiles" data-section="style-tiles">
+	                <li class="c-case-study__section c-case-study__section__child" id="style-tiles" data-section="style-tiles" data-module="Inview" data-pixels-inview="500">
 	                    {{>adspy-style-tiles}}
 	                </li>
 
@@ -23,7 +23,7 @@ nav: work
 	                    {{>adspy-logo}}
 	                </li>
 
-	                <li class="c-case-study__section c-case-study__section__child" id="colours" data-section="colours">
+	                <li class="c-case-study__section c-case-study__section__child" id="colours" data-section="colours" data-module="Inview" data-pixels-inview="300">
 	                    {{>adspy-colours}}
 	                </li>
 
@@ -41,7 +41,7 @@ nav: work
 	                    {{>adspy-admachine}}
 	                </li>
 
-	                <li class="c-case-study__section c-case-study__section__child" id="extras" data-section="extras">
+	                <li class="c-case-study__section c-case-study__section__child" id="extras" data-section="extras" data-module="Inview" data-pixels-inview="500">
 	                    {{>adspy-extras}}
 	                </li>
 	            </ol>
