--- a/src/pages/work.hbs
+++ b/src/pages/work.hbs
@@ -21,14 +21,15 @@ nav: work
 <section class="o-section">
 	<header class="o-section__header o-section__header--center">
 		<div class="o-wrap o-wrap--large">
-			<h2 class="o-section__header__heading">What we're currently <span class="u-highlight-text">working on</span></h2>
+			<h2 class="o-section__header__heading">What we're <span class="u-highlight-text">working on</span></h2>
 
 			<div class="o-section__header__description">
 				{{{description}}}
 			</div>
 		</div>
 	</header>
-	{{> feat-media-grid work.media}}
+
+	{{> dribbble-shots work.dribbble}}
 </section>
 
 {{>footer footer}}
