--- a/src/components/planner/input.hbs
+++ b/src/components/planner/input.hbs
@@ -1,6 +1,13 @@
-<div class="o-section o-form__field">
+<div class="o-form__field">
 	<label class="o-label" for="{{for}}">{{{label}}} {{#if optional}}<span class="o-label__note">Optional</span>{{/if}}</label>
-	<input class="o-input u-mega" id="{{for}}" type="{{type}}" placeholder="{{placeholder}}">
+	<div class="o-input-wrap">
+		<input class="o-input" id="{{for}}" type="{{type}}" placeholder="{{placeholder}}">
+		{{!-- {{#if icon}}
+		<svg class="u-icon u-icon--{{icon}}">
+            <use xlink:href="#icon--{{icon}}"></use>
+        </svg>
+        {{/if}} --}}
+	</div>
 	<span class="o-validation">{{errorEmpty}}</span>
 	{{#if errorInvalid}}<span class="o-validation">{{errorInvalid}}</span>{{/if}}
 </div>
