--- a/src/layouts/site.hbs
+++ b/src/layouts/site.hbs
@@ -71,6 +71,7 @@
 
 		<div class="u-icons">@@icons</div>
 		<!-- @todo figure out why this isnt getting merged into main -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="assets/js/libs/modernizr.js"></script>
 		<script src="assets/build/js/main.js"></script>
 		<script>@@googleAnalytics</script>
