--- a/src/pages/article.hbs
+++ b/src/pages/article.hbs
@@ -20,7 +20,7 @@ nav: blog
 		</header>
 	</div>
 
-	<div class="o-wrap o-wrap--small s-free-content" itemprop="articleBody">
+	<div class="o-wrap o-wrap--medium s-free-content" itemprop="articleBody">
 		<p class="u-intro">Last year I wrote a post, Need for Speed, where I shared my workflows and techniques along with the tools involved in the development of my site.</p>
 
 		<p>Since then my site has gone through another redesign, and although I made various workflow and server-side improvements, I gave front-end performance extra attention. Here’s what I did, why I did it, and the tools I used to optimize front-end performance on my site.</p>
