--- a/assets/sass/objects/page/heading.scss
+++ b/assets/sass/objects/page/heading.scss
@@ -5,19 +5,11 @@
 =========================================================== */
 
 .o-page-heading {
-	padding-top: 9rem;
+	padding-top: $padding-small * 1.5;
 }
 
 .o-page-heading__description {
 	color: $dark-3;
-}
-
-.o-page-heading__ctas {
-	margin-top: $line-height;
-}
-
-.o-page-heading--cover {
-	padding-top: 5rem;
 }
 
 @include respond-max( $mq-small ) {
@@ -28,7 +20,7 @@
 
 @include respond-min( $mq-small ) {
 	.o-page-heading {
-		padding-top: 11rem;
+		padding-top: $padding-medium * 1.5;
 	}
 }
 
@@ -52,34 +44,6 @@
 }
 
 @include respond-min( $mq-large ) {
-	.o-page-heading {
-		padding-top: $padding-large + 9rem;
-	}
-
-	.o-page-heading--cover {
-		.o-page-heading__row {
-			@include clearfix;
-		}
-
-		.o-page-heading__content,
-		.o-page-heading__figure {
-			float: left;
-			width: 50%;
-		}
-
-		.u-word-wrap {
-			display: block;
-		}
-
-		// @todo prefix under cssvhunit
-		height: 100vh;
-
-		.flexbox & {
-			align-items: center;
-			display: flex;
-		}
-	}
-
 	.o-page-heading--center-content {
 		text-align: center;
 	}
@@ -101,5 +65,11 @@
 		.u-word-wrap {
 			display: block;
 		}
+	}
+}
+
+@include respond-min( $mq-x-large ) {
+	.o-page-heading {
+		padding-top: $padding-large * 1.5;
 	}
 }
