--- a/src/components/page-heading.hbs
+++ b/src/components/page-heading.hbs
@@ -17,7 +17,7 @@
 	<div class="o-page-heading__row o-wrap o-wrap--x-large">
 		<div class="o-page-heading__content">
 			<h1 class="o-page-heading__heading{{#if headingClass}} {{headingClass}}{{/if}}">{{{heading}}}</h1>
-			{{#if meta}}<strong class="o-page-heading__meta u-highlight-text u-intro">{{meta}}</strong>{{/if}}
+			{{#if meta}}<strong class="o-page-heading__meta u-intro">{{meta}}</strong>{{/if}}
 
 			<div class="o-page-heading__description u-intro">
 				{{{description}}}
