--- a/assets/sass/components/header.scss
+++ b/assets/sass/components/header.scss
@@ -5,6 +5,7 @@
 =========================================================== */
 
 .c-header {
+	background: $dark-1;
 	transition: background $speed ease,
 				transform $speed ease;
 	width: 100%;
@@ -19,13 +20,19 @@
 .u-icon--logo {
 	@include icon( $pri, 4rem, 4rem );
 	margin-bottom: -.8rem;
+	transition: transform $speed ease;
 }
 
 .u-icon--menu {
-	@include icon( $dark-3, 1.6rem, 1.6rem );
+	@include icon( $white, 1.6rem, 1.6rem );
 }
 
 .no-enhance {
+	.c-header {
+		position: absolute;
+		top: 0;
+	}
+
 	.c-header__toggle-menu-button {
 		display: none;
 	}
@@ -34,49 +41,29 @@
 .enhance {
 	.c-header {
 		position: fixed;
-	}
-}
-
-@include respond-max( $mq-small ) {
-	.c-header__logo {
-		padding: 0 $padding-small / 2;
-	}
-
-	.c-header__toggle-menu-button {
-		padding-right: $padding-small / 2;
-	}
-}
-
-@include respond-min-max( $mq-small, $mq-large ) {
-	.c-header__logo {
-		padding: 0 $padding-small;
-	}
-
-	.c-header__toggle-menu-button {
-		padding-right: $padding-small;
+		top: 0;
 	}
 }
 
 @include respond-max( $mq-large ) {
 	.c-header {
-		// background: $background-colour;
+		text-align: center;
 	}
 
 	.c-header__inner {
-		// background: $background-colour;
+		background: $dark-1;
 		padding-top: 1.5rem;
 	}
 
 	.c-header__logo {
 		display: inline-block;
-		width: 80%;
+		padding: 0 $padding-small / 2;
+		width: 60%;
 	}
 
 	.c-header__toggle-menu-button {
 		height: 100%;
-		padding-bottom: 1.5rem;
-		padding-left: $padding-small / 2;
-		padding-top: $padding-small / 2;
+		padding: $padding-small / 2 $padding-small / 2 1.5rem;
 		position: absolute;
 		right: 0;
 		text-align: right;
