--- a/assets/sass/components/nav.scss
+++ b/assets/sass/components/nav.scss
@@ -4,6 +4,10 @@
 
 =========================================================== */
 
+.c-nav {
+	background: $dark-1;
+}
+
 .c-nav__list {
 	list-style: none;
 }
@@ -14,35 +18,32 @@
 }
 
 .c-nav__link {
-	color: $dark-3;
+	color: $white;
 	transition: color $speed ease,
 				transform $speed ease;
 
 	.u-icon {
-		@include icon( $med-1, 1.6rem, 1.6rem );
+		@include icon( rgba( $white, .75 ), 1.6rem, 1.6rem );
 	}
 
 	&:hover,
 	&:focus {
-		color: $heading-colour;
-
 		.u-icon {
 			fill: $sec;
 		}
 	}
 
 	&.is-active {
-		color: $heading-colour;
+		color: $ter;
 
 		.u-icon {
-			fill: $pri;
+			fill: $ter;
 		}
 	}
 }
 
 .c-nav__link--button {
 	background: $pri;
-	border-radius: $border-radius * 10;
 	color: $white;
 	transition: background $speed ease,
 				transform $speed ease;
@@ -66,31 +67,11 @@
 	}
 }
 
-@include respond-max( $mq-small ) {
-	.c-nav__item {
-		padding: 0 $padding-small / 8;
-	}
-
-	.c-nav__link {
-		padding: $padding-small / 4 1.5rem;
-	}
-}
-
 @include respond-max( $mq-medium ) {
 	.c-nav__link {
 		.u-icon {
 			margin: .3rem 0;
 		}
-	}
-}
-
-@include respond-min-max( $mq-small, $mq-large ) {
-	.c-nav__item {
-		padding: 0 $padding-small / 2;
-	}
-
-	.c-nav__link {
-		padding: $padding-small / 4 $padding-small / 2;
 	}
 }
 
@@ -105,6 +86,7 @@
 @include respond-max( $mq-large ) {
 	.c-nav__link {
 		display: block;
+		padding: $padding-small / 4 $padding-small / 2;
 		text-align: left;
 
 		.u-icon {
@@ -119,8 +101,8 @@
 			// background: $background-colour; @todo add when toggle nav
 			display: block;
 			left: 0;
-			padding-bottom: $padding-small / 4;
-			padding-top: $padding-small / 4;
+			// padding-bottom: $padding-small / 4;
+			padding-top: $padding-small / 2;
 			position: absolute;
 			top: 0;
 			transform: translateY( -100% );
@@ -164,5 +146,9 @@
 	.c-nav__link {
 		display: block;
 		padding: .9rem $padding-small / 2;
+	}
+
+	.c-nav__link--button {
+		border-radius: $border-radius * 10;
 	}
 }
