--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -36,6 +36,8 @@
 		'components/article.scss',
 		'components/dribbble-shots.scss';
 
+@import 'components/hero/base.scss';
+
 @import 'components/case-studies/card.scss',
 		'components/case-studies/section/section.scss',
 		'components/case-studies/section/header.scss',
