--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -3,25 +3,4 @@ title: Home Page
 pageClass: s-home
 ---
 
-{{>page-heading home.page-heading}}
-
-{{!-- <section class="o-page-heading o-page-heading--cover">
-	<div class="o-section o-wrap o-wrap--x-large">
-		<h1 class="c-page-heading__heading">We <span class="u-highlight-text">design</span> &amp; <span class="u-highlight-text">build</span> websites</h1>
-
-		<div class="o-page-heading__description s-free-content">
-			<p>We’re Rob and Kev – a team of <strong>freelance</strong> creatives based in the UK. We specialise in creating performant, responsive websites, but we do a few other things too.</p>
-		</div>
-
-		<div class="o-page-heading__ctas">
-			<a href="#" class="c-button c-button--secondary">
-				view work 
-				<svg class="u-icon u-icon--arrow-right">
-					<use xlink:href="#icon--arrow-right"></use>
-				</svg>
-			</a>
-		</div>
-
-		<figure class="o-page-heading__figure"></figure>
-	</div>
-</section> --}}
+{{>hero home.hero}}
