--- a/src/pages/work.hbs
+++ b/src/pages/work.hbs
@@ -4,19 +4,9 @@ pageClass: s-work
 nav: work
 ---
 
-{{>page-heading work.page-heading}}
+{{!-- {{>page-heading work.page-heading}} --}}
 
-<section class="o-section o-wrap o-wrap--x-large">
-	<div class="c-case-study-card-row">
-		<div class="c-case-study-card-col">
-			{{>card card.geckotree}}
-		</div>
-		
-		<div class="c-case-study-card-col">
-			{{>card card.adspy}}
-		</div>
-	</div>
-</section>
+{{>card card.adspy}}
 
 <section class="o-section">
 	<header class="o-section__header o-section__header--center">
@@ -31,5 +21,3 @@ nav: work
 
 	{{> dribbble-shots work.dribbble}}
 </section>
-
-{{>footer footer}}
