--- a/assets/sass/components/case-studies/adspy/card.scss
+++ b/assets/sass/components/case-studies/adspy/card.scss
@@ -6,26 +6,10 @@
 
 .c-case-study-card--adspy {
 	.c-case-study-card__link {
-		background-color: $adspy-pri-light;
-
-		&:hover {
-			background-color: rgba( $adspy-pri, .25 ); // @todo hex colour
-		}
-
-		.no-svg & {
-			background-image: url( '#{$images}/case-studies/adspy/adspy-logo.png' );
-		}
+		background-color: $adspy-pri;
 
 		.svg & {
 			background-image: url( '#{$images}/case-studies/adspy/adspy-logo.svg' );
 		}
-	}
-
-	.c-case-study-card__services {
-		color: $adspy-pri;
-	}
-
-	.c-case-study-card__button {
-		background: $adspy-pri;
 	}
 }
