--- a/assets/sass/components/case-studies/card.scss
+++ b/assets/sass/components/case-studies/card.scss
@@ -5,10 +5,10 @@
 =========================================================== */
 
 .c-case-study-card__link {
-	background-position: bottom -7rem right -12rem;
+	background-position: left -15rem center;
 	background-repeat: no-repeat;
+	background-size: 65%;
 	display: block;
-	padding: $padding-small $padding-small / 2;
 	transition: background-color $speed ease,
 				transform $speed ease;
 
@@ -18,7 +18,7 @@
 }
 
 .c-case-study-card__header {
-	max-width: 54rem;
+	max-width: 80rem;
 
 	& + .c-case-study-card__ctas {
 		margin-top: $padding-small;
@@ -26,11 +26,12 @@
 }
 
 .c-case-study-card__heading {
-	color: $heading-colour;
+	color: $white;
 	padding-bottom: .2em;
 }
 
 .c-case-study-card__services {
+	color: $text-colour;
 	display: inline-block;
 
 	& + .c-case-study-card__description {
@@ -39,100 +40,16 @@
 }
 
 .c-case-study-card__description {
-	color: $text-colour;
+	color: $white;
+	color: rgba( $white, .85 );
 }
 
 .c-case-study-card__button {
 	color: $white;
 }
 
-@include respond-min( $mq-small ) {
-	.c-case-study-card__link {
-		padding: $padding-small;
-	}
-}
-
-@include respond-max( $mq-small ) {
-	.c-case-study-card-row {
-		margin-left: -$padding-small / 2;
-		margin-right: -$padding-small / 2;
-	}
-}
-
-@include respond-min-max( $mq-small, $mq-large ) {
-	.c-case-study-card-row {
-		margin-left: -$padding-small;
-		margin-right: -$padding-small;
-	}
-}
-
-@include respond-max( $mq-large ) {
-	.c-case-study-card-col {
-		& + & {
-			margin-top: .1rem;
-		}
-	}
-}
-
 @include respond-min( $mq-large ) {
-	.c-case-study-card-row {
-		@include clearfix;
-		margin-left: -.1rem;
-	}
-
-	.c-case-study-card-col {
-		float: left;
-		padding-left: .1rem;
-		width: 50%;
-
-		&:nth-child( n+3 ) {
-			margin-top: .1rem;
-		}
-	}
-
-	.c-case-study-card__link {
-		padding: $padding-medium $padding-small;
-	}
-
 	.c-case-study-card__header + .c-case-study-card__ctas {
 		margin-top: $padding-small;
-	}
-}
-
-@include respond-min( $mq-animate ) {
-	.cssanimations {
-		.c-case-study-card {
-			animation: fadeInUp $speed * 3 $timing-function-2 both;
-			opacity: 0;
-		}
-
-		@for $i from 1 through 2 {
-  			.c-case-study-card-row > :nth-child( #{$i} ) {
-  				.c-case-study-card {
-  					animation-delay: #{($i * .2)}s;
-   				}
-  			}
-		}
-	}
-}
-
-@include respond-min( $mq-x-large ) {
-	.c-case-study-card-row {
-		margin-left: -$padding-small / 2;
-	}
-
-	.c-case-study-card-col {
-		padding-left: $padding-small / 2;
-
-		&:nth-child( n+3 ) {
-			margin-top: $padding-small / 2;
-		}
-	}
-}
-
-@include respond-min-max( $mq-large, $mq-x-large ) {
-	.c-case-study-card-row {
-		margin-left: -$padding-small - .1rem;
-		margin-right: -$padding-small;
 	}
 }
