--- a/assets/sass/components/footer.scss
+++ b/assets/sass/components/footer.scss
@@ -4,49 +4,113 @@
 
 =========================================================== */
 
+// .c-footer {
+// 	text-align: center;
+// }
+
+// .c-footer__planner + .c-footer__social {
+// 	margin-top: $padding-medium;
+// }
 .c-footer {
-	text-align: center;
+	background: $adspy-pri;
 }
 
-.c-footer__planner + .c-footer__social {
-	margin-top: $padding-medium;
+.c-footer__heading {
+	color: $white;
 }
 
 .c-footer__social {
 	list-style: none;
 
 	.u-icon {
-		@include icon( rgba( $dark-3, .5 ), 3.2rem, 3.2rem );
+		@include icon( $white, 3.2rem, 3.2rem );
 	}
 }
 
 .c-footer__social__item {
 	display: inline-block;
-	margin: 0 $padding-small / 2;
+	margin: 0 2rem;
 }
 
 .c-footer__social__link {
+	border: $border-width solid $white;
+	border-radius: 100%;
 	display: block;
+	padding: 1.5rem 1.5rem .7rem;
+	transition: border $speed ease;
 
 	&:hover,
 	&:focus {
+		&.c-footer__social__link--twitter {
+			border-color: $dark-1;
+		}
+
+		&.c-footer__social__link--dribbble {
+			border-color: $dark-1;
+		}
+
+		&.c-footer__social__link--instagram {
+			border-color: $dark-1;
+		}
+
 		.u-icon--twitter {
-			fill: $twitter;
+			fill: $dark-1;
 		}
 
 		.u-icon--dribbble {
-			fill: $dribbble;
+			fill: $dark-1;
 		}
 
 		.u-icon--instagram {
-			fill: $instagram;
+			fill: $dark-1;
 		}
 	}
 }
 
 @include respond-min( $mq-large ) {
+	.c-footer {
+		position: relative;
+
+		.o-section {
+			@include clearfix;
+			padding-bottom: $padding-large;
+			padding-top: $padding-large;
+		}
+
+		// &:after {
+		// 	background: rgba( $black, .1 );
+		// 	border-radius: 0 $border-radius * 100 $border-radius * 100 0;
+		// 	content: '';
+		// 	height: 100%;
+		// 	left: 0;
+		// 	position: absolute;
+		// 	top: 0;
+		// 	width: 60%;
+		// 	z-index: -1;
+		// }
+	}
+
+	.c-footer__planner {
+		float: left;
+	}
+
+	.c-footer__social {
+		float: right;
+	}
+
 	.c-footer__heading {
 		display: inline-block;
 		margin-right: 4rem;
+	}
+
+	.no-touch {
+		margin-bottom: 300px;
+
+		.c-footer {
+			bottom: 0;
+			position: fixed;
+			width: 100%;
+			z-index: -1;
+		}
 	}
 }
