--- a/src/layouts/site.hbs
+++ b/src/layouts/site.hbs
@@ -1,6 +1,6 @@
 <!doctype html>
-<!--[if lte IE 9]> <html lang="en" class="no-enhance no-js lt-ie10"> <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="en" class="no-enhance no-js"> <!—<![endif]-->
+<!--[if lte IE 9]> <html lang="en" class="no-enhance lt-ie10"> <![endif]-->
+<!--[if gt IE 9]><!--> <html lang="en" class="{{pageClass}} no-enhance"> <!—<![endif]-->
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
@@ -53,7 +53,9 @@
 			<script src="assets/bower_components/html5shiv/dist/html5shiv.min.js"></script>
 			<link rel="stylesheet" href="assets/build/css/ie.css">
 		<![endif]-->
-
+		
+		<!-- @todo concat into head.js -->
+		<script src="assets/js/libs/modernizr.js"></script>
 		<script>
 			if( 'visibilityState' in document ) {
 				var $html = document.querySelector( 'html' );
@@ -62,17 +64,17 @@
 			}
 		</script>
 	</head>
-	<body class="o-page {{pageClass}}">
+	<body class="o-page">
 		{{>header}}
 
 		<main class="o-page__content" role="main">
 			{{>body}}
 		</main>
 
+		{{>footer footer}}
+
 		<div class="u-icons">@@icons</div>
-		<!-- @todo figure out why this isnt getting merged into main -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="assets/js/libs/modernizr.js"></script>
 		<script src="assets/build/js/main.js"></script>
 		<script>@@googleAnalytics</script>
 	</body>
